@@ -354,13 +354,14 @@ sub get_spvm_builder_module_file_names {
     SPVM/Builder/Config/Exe.pm
     SPVM/Builder/Config.pm
     SPVM/Builder/Exe.pm
+    SPVM/Builder/LibInfo.pm
     SPVM/Builder/LinkInfo.pm
     SPVM/Builder/ObjectFileInfo.pm
-    SPVM/Builder/Resource.pm
     SPVM/Builder.pm
+    SPVM/Builder/Resource.pm
     SPVM/Builder/Util/API.pm
     SPVM/Builder/Util.pm
-  );
+);
   
   return \@spvm_builder_module_file_names;
 }
